--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=8080
 MONGO_URI=mongodb+srv://rohitshalgar04:TeamEduTrack@cluster0.o1egt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY=bjkbaoiohipan
