--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.6",
+    "axios": "^1.7.9",
+    "icons": "^1.0.0",
+    "jspdf": "^2.5.2",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
+    "redux-persist": "^6.0.0",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
