--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.1.5",
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.7.4"
+    "sonner": "^1.7.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
