--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,9 @@ PORT=8080
 MONGO_URI=mongodb+srv://rohitshalgar04:TeamEduTrack@cluster0.o1egt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=bjkbaoiohipan
 # MONGO_URI=mongodb://localhost:27017/
+
+# cloudinary setup
+API_KEY=527799336268273
+API_SECRET=yuC4in8WT7adzhgUUQRrdcf1TxQ
+CLOUD_NAME=dt0ugqbrf
+UPLOAD_PRESET=EduTrack
