--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "icons": "^1.0.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.475.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
