update the attendance

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT=8080
-MONGO_URI=mongodb+srv://rohitshalgar04:TeamEduTrack@cluster0.o1egt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://rohitshalgar04:TeamEduTrack@cluster0.o1egt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=bjkbaoiohipan
-# MONGO_URI=mongodb://localhost:27017/
+MONGO_URI=mongodb://localhost:27017/EduTrack
 
 # cloudinary setup
 API_KEY=527799336268273
