--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "recharts": "^2.15.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.4",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
